--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,42 @@
 .App {
+  font-family: 'Noto Sans', sans-serif;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  max-width: 960px;
+  margin: 0 auto;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+  border: 1px black solid;
+  background: #cd0000;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  font-size: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 56px;
+}
+
+h3 {
+  font-size: 36px;
+  color: #e1d816;
+}
+
+.header {
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px black solid;
+}
+
+.colors {
+  color: #000000;
+  color: #4ECDC4;
+  color: #cd0000;
+  color: #9c9723;
+  color: #e1d816;
+}
+
+#root {
+  background:#000000;
 }
