--- a/src/routes/styles/App.css
+++ b/src/routes/styles/App.css
@@ -3,9 +3,9 @@
   padding-top: 20px;
   padding-bottom: 20px;
   max-width: 960px;
+  min-width: 360px;
   margin: 0 auto;
   text-align: center;
-  border: 1px black solid;
   background: #cd0000;
   min-height: 100vh;
 }
@@ -26,7 +26,6 @@ h3 {
 .header {
   padding-left: 20px;
   padding-right: 20px;
-  border: 1px black solid;
 }
 
 .colors {
