--- a/src/routes/styles/App.css
+++ b/src/routes/styles/App.css
@@ -11,15 +11,15 @@
 }
 
 p {
-  font-size: 24px;
+  font-size: 1em;
 }
 
-h1 {
-  font-size: 56px;
+header>h1 {
+  font-size: 5em;
 }
 
 h3 {
-  font-size: 36px;
+  font-size: 3em;
   color: #e1d816;
 }
 
