--- a/src/routes/styles/welcome.css
+++ b/src/routes/styles/welcome.css
@@ -12,8 +12,14 @@
   text-align: center;
   background: #000000;
   color: #e1d816;
-  font-size: 30px;
+  font-size: 2em;
   font-weight: bold;
+}
+
+.hero>h1{
+  width: 80%;
+  margin-left:10%;
+  margin-right:10%;
 }
 
 .description-first {
@@ -102,6 +108,12 @@
   margin:  0 auto;
   color: #000000;
   background: #cd0000;
+  border-radius: 10px;
   font-size: 24px;
-  border: 3px solid #e1d816;
+  border: 2px solid #e1d816;
+}
+
+.start-button:hover{
+  background: #e1d816;
+  transition: 0.3s;
 }
